Fixed mobile menu spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -146,6 +146,10 @@ nav a:hover::before {
     transform: translateX(0%);
 }
 
+.body-active{
+    overflow: hidden;
+}
+
 @keyframes navLinkFade {
     from {
         opacity: 0;
